# workspace2024

./: .gitignore
cc/: 9cc.c  Makefile
fastapi-bq-accesslog/: .gitignore  accesslog_middleware.py  main.py  pyproject.toml  schema.avsc  schema.py  script.js  test_accesslog_middleware.py
gomock-generics-test/: go.mod  if.go  if_test.go
gomock-generics-test/mock/: if.go
kagome-example/: go.mod  go.sum  main.go
pggt-51/: Makefile  buf.gen.tag.yaml  buf.gen.yaml  buf.yaml  main.proto
pggt-51-2/: buf.gen.gotag.yaml  service.pb.go  service.proto
pino-gcp-logger/: README.md  bun.lockb  index.ts  package.json
python-asyncio/: main.py  pyproject.toml
rust_guessing_game/src/: main.rs
rust_playground/src/: main.rs
tlgen/: Makefile  config.yaml
tlgen/app/: go.mod  main.go
